Updates from Overleaf

--- a/iucr.bib
+++ b/iucr.bib
@@ -1,16 +1,14 @@
-@article{Belland:82,
-author = {P. Belland and J. P. Crenn},
-journal = {Appl. Opt.},
-keywords = {Apertures; Diffraction theory; Fresnel diffraction; Gaussian beams; Laser resonators; Optical elements},
-number = {3},
-pages = {522--527},
-publisher = {OSA},
-title = {Changes in the characteristics of a Gaussian beam weakly diffracted by a circular aperture},
-volume = {21},
-month = {Feb},
-year = {1982},
-url = {http://ao.osa.org/abstract.cfm?URI=ao-21-3-522},
-doi = {10.1364/AO.21.000522},
+@article{westfahl,
+author = "Westfahl, Jr, Harry and Lordano Luiz, S{\'{e}}rgio A. and Meyer, Bernd C. and Meneau, Florian",
+title = "{The coherent radiation fraction of low-emittance synchrotrons}",
+journal = "Journal of Synchrotron Radiation",
+year = "2017",
+volume = "24",
+number = "3",
+pages = "566--575",
+month = "May",
+doi = {10.1107/S1600577517003058},
+url = {https://doi.org/10.1107/S1600577517003058},
 }
 
 @article{Tanaka:85,
@@ -42,6 +40,21 @@ year = {1985},
 url = {http://ao.osa.org/abstract.cfm?URI=ao-24-12-1732},
 doi = {10.1364/AO.24.001732},
 abstract = {},
+}
+
+@article{Belland:82,
+author = {P. Belland and J. P. Crenn},
+journal = {Appl. Opt.},
+keywords = {Apertures; Diffraction theory; Fresnel diffraction; Gaussian beams; Laser resonators; Optical elements},
+number = {3},
+pages = {522--527},
+publisher = {OSA},
+title = {Changes in the characteristics of a Gaussian beam weakly diffracted by a circular aperture},
+volume = {21},
+month = {Feb},
+year = {1982},
+url = {http://ao.osa.org/abstract.cfm?URI=ao-21-3-522},
+doi = {10.1364/AO.21.000522},
 }
 
 @book{elleaume,
