--- a/iucr.bib
+++ b/iucr.bib
@@ -74,6 +74,14 @@ doi = {10.1364/AO.21.000522},
   publisher={Cambridge University Press}
 }
 
+@book{jackson,
+  title={Classical electrodynamics},
+  author={Jackson, J. D.},
+  isbn={0-471-30932-X},
+  year={1999},
+  publisher={Wiley}
+}
+
 @article{coisson1997,
 author = "Co{\"\i}sson, R. and Marchesini, S.",
 title = "{Gauss{--}Schell Sources as Models for Synchrotron Radiation}",
@@ -157,12 +165,19 @@ author = "Kwang-Je Kim"
    pages       = "1177-1179"
 }
 
-@Misc{comsyl,
-  title = {Comsyl},
-  author = {Glass, M},
-  year={2017},
-  url  = 	 {https://www.github.com/mark-glass/comsyl} 
+@article{srioLBL,
+author = "Sanchez del Rio, Manuel and Wojdyla, Antoine and Goldberg, Kenneth A. and Cutler, Grant D. and Cocco, Daniele and Padmore, Howard A.",
+title = "{Compensation of heat load deformations using adaptive optics for the ALS upgrade: a wave optics study}",
+journal = "Journal of Synchrotron Radiation",
+year = "2020",
+volume = "27",
+number = "5",
+pages = "1141--1152",
+month = "Sep",
+doi = {10.1107/S1600577520009522},
+url = {https://doi.org/10.1107/S1600577520009522}
 }
+
 
 @book{orangebook,
   title={ESRF Upragde programme phase II},
@@ -170,4 +185,77 @@ author = "Kwang-Je Kim"
   year={2014},
   pages = "75",
   publisher={ESRF}
+}
+
+@Misc{codeCOMSYL,
+  title = {Comsyl},
+  author = {Glass, M},
+  year={2017},
+  url  = 	 {https://www.github.com/oasys-kit/comsyl} 
+}
+@misc{pySRU,
+  author = {Thery, S. and Glass, M. and and Sanchez del Rio, M},
+  title = {Synchrotron Radiation Undulator emission in python},
+  year = {2016},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url  = 	 {https://github.com/oasys-kit/pySRU}
+}
+
+@article{codeHYBRID,
+author = "Shi, Xianbo and Reininger, Ruben and Sanchez del Rio, Manuel and Assoufid, Lahsen",
+title = "{A hybrid method for X-ray optics simulation: combining geometric ray-tracing and wavefront propagation}",
+journal = "Journal of Synchrotron Radiation",
+year = "2014",
+volume = "21",
+number = "4",
+pages = "669--678",
+month = "Jul",
+doi = {10.1107/S160057751400650X},
+url = {https://doi.org/10.1107/S160057751400650X},
+keywords = {hybrid method, beamline design, X-ray optics simulation, ray-tracing, wavefront propagation, partial coherence},
+}
+
+@article{codeSRW,
+    author = {O. Chubar and P. Elleaume},
+    title = {Accurate and efficient computation of synchrotron radiation in the near field region},
+    journal = {Proceedings of the 6th European Particle Accelerator Conference - EPAC-98},
+    pages = {1177--1179},
+    url = {http://accelconf.web.cern.ch/AccelConf/e98/PAPERS/THP01G.PDF},
+    year = {1998},
+}
+
+@article{codeSHADOW,
+    author = {Sanchez del Rio, M. and Canestrari, N. and Jiang, F. and Cerrina, F.},
+    title = {{\it SHADOW3}: a new version of the synchrotron X-ray optics modelling package},
+    journal = {Journal of Synchrotron Radiation},
+    url = {http://dx.doi.org/10.1117/12.893433},
+    year = {2011},
+    volume = {18},
+    number = {5},
+    pages = {708--716}
+}
+
+@article{codeSHADOWOUI,
+    author = {Rebuffi, L. and Sanchez del Rio, M.},
+    title = {{\it ShadowOui}: a new visual environment for X-ray optics and synchrotron beamline simulations},
+    journal = {Journal of Synchrotron Radiation},
+    url={https://doi.org/10.1107/S1600577516013837},
+    year = {2016},
+    volume = {23},
+    number = {6},
+    pages = {1357--1367},
+    month = "November"
+}
+
+@article{codeOASYS,
+  author = {Rebuffi, L. and Sanchez del Rio, M.},
+  title = {{OASYS (OrAnge SYnchrotron Suite): an open-source graphical environment for x-ray virtual experiments}},
+  journal = {Proc. SPIE},
+  volume = {10388},
+  number = {103880S},
+  pages = {169--177},
+  year = {2017},
+  doi = {10.1117/12.2274263},
+  URL = {http://doi.org/10.1117/12.2274263}
 }
